# SafeQuery

./: .dockerignore  .env.example  .gitignore  DESIGN.md  LICENSE  PRODUCT.md  README.md
backend/: .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/app/: __init__.py  main.py
backend/tests/: test_adapter_credential_isolation.py  test_adapter_single_source_validation.py  test_analyst_response_schema.py  test_api_errors.py  test_application_postgres_guard.py  test_audit_event_model.py  test_backend_packaging.py  test_candidate_execute_api.py  test_candidate_lifecycle_revalidation.py  test_candidate_source_metadata.py  test_config.py  test_dataset_contract_models.py  test_demo_source_seed.py  test_dev_auth_preview_api.py  test_enterprise_auth_bridge_contract.py  test_evaluation_harness.py  test_execution_connector_selection.py  test_execution_runtime_controls.py  test_first_run_doctor.py  test_generation_context_preparation.py  test_governed_answer_fixtures.py  test_intent_mapping.py  test_mlflow_export_contract.py  test_mssql_execution_connector.py  test_mvp_answer_summary.py  test_operator_health.py  test_operator_history_payloads.py  test_operator_workflow_history.py  test_postgresql_execution_connector.py  test_preview_persistence.py  test_preview_source_governance_resolution.py  test_release_gate.py  test_request_source_selection.py  test_result_validation_contract.py  test_retrieval_corpus_governance.py  test_review_decision_persistence.py  test_review_llm_adapter_contract.py  test_review_llm_adapter_request.py  (+19 more)
(+179 files in other folders)
